Serialization was made through SensduCore constructor. Bug on input page was fixed (jump of the output form).

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -79,7 +79,7 @@ html,
     }
 
     .form-control {
-        height: 94px;
+        height: 93px;
     }
 
     .container {
